# FMScraper

./: .gitignore  LICENSE  README.md  match_list_scraper.py  match_stats.py  pyproject.toml  scraper.py
fmscraper/: __init__.py  fotmob_stats.py  match_list_scraper.py  match_stats.py  xmas_generator.py
